// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox UI component renders correctly when checked 1`] = `
.c0:not(.hasLabel) {
  -webkit-flex: 0 0 22px;
  -ms-flex: 0 0 22px;
  flex: 0 0 22px;
  width: 22px;
  height: 22px;
}

.c0.hasLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  -webkit-flex: 0 0 22px;
  -ms-flex: 0 0 22px;
  flex: 0 0 22px;
  width: 22px;
  height: 22px;
  color: #fff;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  border: solid 1px #aaa;
  border-radius: 3px;
  background: #fff;
  background: #04884C;
  border-color: #04884C;
  box-shadow: inset 0px 1px 1px rgba(0,0,0,0.15);
}

.c1:hover {
  border-color: #04884C;
}

.c2 {
  fill: #fff;
  height: 55%;
}

.c3 {
  color: #596B7A;
  font-size: 16px;
  padding: 5px 0 5px 10px;
  cursor: pointer;
}

<ThemeProvider
  theme={
    Object {
      "bannerWidth": 1340,
      "borderRadius": "3px",
      "colorMain": "#ef0071",
      "colors": Object {
        "adminBackground": "#F0F3F4",
        "adminBorder": "#EAEAEA",
        "adminContentBackground": "#fff",
        "adminDarkestBackground": "rgba(0, 0, 0, 0.75)",
        "adminLightText": "rgba(255, 255, 255, 0.8)",
        "adminMenuBackground": "#003349",
        "adminOrangeIcons": "#FF672F",
        "adminSecondaryTextColor": "#596B7A",
        "adminSeparation": "#EAEAEA",
        "adminTextColor": "#044D6C",
        "background": "#f4f4f5",
        "clBlue": "#008292",
        "clBlueDark": "#147985",
        "clBlueDarkBg": "#d3ecf0",
        "clBlueDarker": "#0A5159",
        "clBlueDarkest": "#02282D",
        "clBlueLight": "#40B8C5",
        "clBlueLighter": "#80CFD8",
        "clBlueLightest": "#BEE7EB",
        "clDropdownHoverBackground": "#e9e9e9",
        "clGreen": "#04884C",
        "clGreenSuccess": "#008040",
        "clGreenSuccessBackground": "#e4f7ef",
        "clGreyOnGreyBackground": "#707070",
        "clIconAccent": "#01A1B1",
        "clIconBackground": "rgba(1, 161, 177, 0.07)",
        "clIconPrimary": "#00577C",
        "clIconSecondary": "#84939E",
        "clRed": "#E52516",
        "clRed2": "#FC3C2D",
        "clRedError": "#D61607",
        "clRedErrorBackground": "#fde9e8",
        "disabledPrimaryButtonBg": "#d0d0d0",
        "draftYellow": "#8C680D",
        "emailBg": "#e6ebec",
        "emailText": "#004d6c",
        "facebook": "#3b5998",
        "facebookMessenger": "#0084ff",
        "label": "#596B7A",
        "lightGreyishBlue": "#EBEDEF",
        "mediumGrey": "#BDBDBD",
        "placeholder": "#aaa",
        "placeholderBg": "#CFD6DB",
        "popoverDarkBg": "#2D2D2D",
        "popoverDarkFg": "#CBCBCB",
        "secondaryText": "#84939E",
        "separation": "#e0e0e0",
        "text": "#333",
        "twitter": "#1ea4f2",
      },
      "fontSizes": Object {
        "base": 16,
        "large": 18,
        "medium": 17,
        "small": 14,
        "xl": 21,
        "xs": 12,
        "xxl": 25,
        "xxxl": 30,
        "xxxxl": 34,
        "xxxxxl": 42,
      },
      "maxPageWidth": 952,
      "menuHeight": 78,
      "menuStyle": "light",
      "mobileMenuHeight": 72,
      "mobileTopBarHeight": 66,
      "pageWidth": 1150,
      "textWidth": 720,
    }
  }
>
  <Checkbox
    label="test"
    onChange={[MockFunction]}
    size="22px"
    value={true}
  >
    <Checkbox__Container
      className="undefined hasLabel"
      size="22px"
    >
      <div
        className="undefined hasLabel c0"
        size="22px"
      >
        <Checkbox__CheckboxContainer
          checked={true}
          className="e2e-checkbox checked"
          innerRef={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseDown={[Function]}
          size="22px"
          tabIndex={0}
        >
          <div
            checked={true}
            className="e2e-checkbox checked c1"
            onClick={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            size="22px"
            tabIndex={0}
          >
            <Component
              name="checkmark"
            >
              <Component
                className="c2"
                name="checkmark"
              >
                <svg
                  className="c2"
                  height="100%"
                  viewBox="0 0 19 15"
                >
                  <path
                    d="M6.05 11.467L1.533 6.95 0 8.482l6.05 6.05 13-13L17.517 0z"
                    fillRule="evenodd"
                  />
                </svg>
              </Component>
            </Component>
          </div>
        </Checkbox__CheckboxContainer>
        <Checkbox__Label
          onClick={[Function]}
        >
          <label
            className="c3"
            onClick={[Function]}
          >
            test
          </label>
        </Checkbox__Label>
      </div>
    </Checkbox__Container>
  </Checkbox>
</ThemeProvider>
`;

exports[`Checkbox UI component renders correctly when unchecked 1`] = `
.c0:not(.hasLabel) {
  -webkit-flex: 0 0 22px;
  -ms-flex: 0 0 22px;
  flex: 0 0 22px;
  width: 22px;
  height: 22px;
}

.c0.hasLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  -webkit-flex: 0 0 22px;
  -ms-flex: 0 0 22px;
  flex: 0 0 22px;
  width: 22px;
  height: 22px;
  color: #fff;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  border: solid 1px #aaa;
  border-radius: 3px;
  background: #fff;
  background: #fff;
  border-color: #aaa;
  box-shadow: inset 0px 1px 1px rgba(0,0,0,0.15);
}

.c1:hover {
  border-color: #333;
}

.c2 {
  color: #596B7A;
  font-size: 16px;
  padding: 5px 0 5px 10px;
  cursor: pointer;
}

<ThemeProvider
  theme={
    Object {
      "bannerWidth": 1340,
      "borderRadius": "3px",
      "colorMain": "#ef0071",
      "colors": Object {
        "adminBackground": "#F0F3F4",
        "adminBorder": "#EAEAEA",
        "adminContentBackground": "#fff",
        "adminDarkestBackground": "rgba(0, 0, 0, 0.75)",
        "adminLightText": "rgba(255, 255, 255, 0.8)",
        "adminMenuBackground": "#003349",
        "adminOrangeIcons": "#FF672F",
        "adminSecondaryTextColor": "#596B7A",
        "adminSeparation": "#EAEAEA",
        "adminTextColor": "#044D6C",
        "background": "#f4f4f5",
        "clBlue": "#008292",
        "clBlueDark": "#147985",
        "clBlueDarkBg": "#d3ecf0",
        "clBlueDarker": "#0A5159",
        "clBlueDarkest": "#02282D",
        "clBlueLight": "#40B8C5",
        "clBlueLighter": "#80CFD8",
        "clBlueLightest": "#BEE7EB",
        "clDropdownHoverBackground": "#e9e9e9",
        "clGreen": "#04884C",
        "clGreenSuccess": "#008040",
        "clGreenSuccessBackground": "#e4f7ef",
        "clGreyOnGreyBackground": "#707070",
        "clIconAccent": "#01A1B1",
        "clIconBackground": "rgba(1, 161, 177, 0.07)",
        "clIconPrimary": "#00577C",
        "clIconSecondary": "#84939E",
        "clRed": "#E52516",
        "clRed2": "#FC3C2D",
        "clRedError": "#D61607",
        "clRedErrorBackground": "#fde9e8",
        "disabledPrimaryButtonBg": "#d0d0d0",
        "draftYellow": "#8C680D",
        "emailBg": "#e6ebec",
        "emailText": "#004d6c",
        "facebook": "#3b5998",
        "facebookMessenger": "#0084ff",
        "label": "#596B7A",
        "lightGreyishBlue": "#EBEDEF",
        "mediumGrey": "#BDBDBD",
        "placeholder": "#aaa",
        "placeholderBg": "#CFD6DB",
        "popoverDarkBg": "#2D2D2D",
        "popoverDarkFg": "#CBCBCB",
        "secondaryText": "#84939E",
        "separation": "#e0e0e0",
        "text": "#333",
        "twitter": "#1ea4f2",
      },
      "fontSizes": Object {
        "base": 16,
        "large": 18,
        "medium": 17,
        "small": 14,
        "xl": 21,
        "xs": 12,
        "xxl": 25,
        "xxxl": 30,
        "xxxxl": 34,
        "xxxxxl": 42,
      },
      "maxPageWidth": 952,
      "menuHeight": 78,
      "menuStyle": "light",
      "mobileMenuHeight": 72,
      "mobileTopBarHeight": 66,
      "pageWidth": 1150,
      "textWidth": 720,
    }
  }
>
  <Checkbox
    label="test"
    onChange={[MockFunction]}
    size="22px"
    value={false}
  >
    <Checkbox__Container
      className="undefined hasLabel"
      size="22px"
    >
      <div
        className="undefined hasLabel c0"
        size="22px"
      >
        <Checkbox__CheckboxContainer
          checked={false}
          className="e2e-checkbox unchecked"
          innerRef={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseDown={[Function]}
          size="22px"
          tabIndex={0}
        >
          <div
            checked={false}
            className="e2e-checkbox unchecked c1"
            onClick={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            size="22px"
            tabIndex={0}
          />
        </Checkbox__CheckboxContainer>
        <Checkbox__Label
          onClick={[Function]}
        >
          <label
            className="c2"
            onClick={[Function]}
          >
            test
          </label>
        </Checkbox__Label>
      </div>
    </Checkbox__Container>
  </Checkbox>
</ThemeProvider>
`;
